# ml-notes

./: .gitignore  CNAME  _config.yml  _toc.yml  instructions.md  intro.md  myst.yml  notion2.py  pyproject.toml  requirements.txt  serve.py
.github/workflows/: deploy.yml
_build/.doctrees/: environment.pickle  intro.doctree  markdown.doctree  ml_concepts.doctree  ml_papers.doctree  notebooks.doctree
_build/cache/: doi-007154b34b0c4224afa999b6f2bd5c0d.csl.json  doi-025b8b8c319b5a93dfb966c8e8b48e2d.csl.json  doi-042f2db1fac07b108f054c5e7e4fe887.csl.json  doi-07d096db9bb356d9d5b16a083118aa85.csl.json  doi-097802684f73839dc5275e3ed8a01c11.csl.json  doi-09e02dc9f3a00cb37558a3ab852c36ee.csl.json  doi-0d25b4ee48a19ec2793497f40fd8baf1.csl.json  doi-0ff21f142499a843456f57f745088d9e.csl.json  doi-103d47e8468edeb1faed1c240d271427.csl.json  doi-1762278224bad7b1d26e228081b1fdd1.csl.json  doi-23154e7998135b4ce7e60a150c4086b9.csl.json  doi-284853ba813c294ea78f70698adee8c1.csl.json  doi-2a0f91545871bd9044cafe6200e411fc.csl.json  doi-2f431ab9d224c2a75cc38e684ab7c63c.csl.json  doi-3ecf0645e9a7d9cb942048837ded8c9c.csl.json  doi-4052f8b9cf1d1312441209ff923c6a47.csl.json  doi-4be48d7caf7c1b64215230f86e5f5c78.csl.json  doi-4d20a1541f3eed93d20002d867735f11.csl.json  doi-5c6323b4fe098136d86bf4841ee5b11d.csl.json  doi-5d8d6b5ded4f0690b1e8dcbf9aecd72c.csl.json  (+33 more)
_build/html/: .buildinfo  (+44 more)
_static/: custom.css
agent/: agent.py  file_utils.py  notion_utils.py
glossary/: goodharts-law.md
paper-notes/: index.md  perplexity-based-data-pruning.md
plugins/: utterances.js
projects/: index.md
(+174 files in other folders)
